# hoi

./: .gitignore  .gitlab-ci.yml  .hoi.yml  Cargo.toml  README.md  build.sh  run_tests.sh  test.sh
.github/workflows/: ci.yml
src/: hoi.rs  main.rs  user_command.rs
tests/: integration_test.rs
tests/fixtures/: .env  .env.local  .hoi.global.yml  .hoi.with_entrypoint.yml  .hoi.yml
utilities/: Cargo.toml
utilities/src/: lib.rs
