[package]
name = "hoi"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Quillen <kevin.quillen@velir.com>"]
description = "hoi is a command-line tool to help create simple command-line powered utilities."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
derivative = "2.2.0"
tabled = "0.4.2"