[package]
name = "hoi"
version = "0.5.5"
edition = "2021"
authors = ["Kevin Quillen <kevinquillen@gmail.com>"]
description = "hoi is a command-line tool to help create simple command-line powered utilities."
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
keywords = ["commandfile", "command-line", "runner", "development", "utility"]
documentation = "https://github.com/kevinquillen/hoi"
homepage = "https://github.com/kevinquillen/hoi"
repository = "https://github.com/kevinquillen/hoi"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "fileapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Add macOS-specific dependencies here if needed

[target.'cfg(target_os = "linux")'.dependencies]
# Add Linux-specific dependencies here if needed

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tabled = "0.18.0"
thiserror = "2.0.12"
walkdir = "2.4"
dirs-next = "2.0"
indexmap = { version = "2.0", features = ["serde"] }
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.8"
